- code cleanup - format code